legacy/0.5/Plugins.md
# Plugins

Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - the individual
plugin API pages under "Writing" and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.

## {{{createLink 'Adaptors'}}}

* [Backbone](https://github.com/ractivejs/ractive-adaptors-backbone)
* [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
* [Promise-alt](https://github.com/rstacruz/ractive-promise-alt) - contributed by [@rstacruz](https://github.com/rstacruz)
* [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
* [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
* [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
* [Ractive](https://github.com/rstacruz/ractive-ractive) (synchronise several Ractive instances) - contributed by [@rstacruz](https://github.com/rstacruz)
* TODO Object.observe


## {{{createLink 'Decorators'}}}

* [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
* [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
* [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)


## {{{createLink 'Events'}}}

* [Tap](http://ractivejs.github.io/ractive-events-tap)
* [Hover](http://ractivejs.github.io/ractive-events-hover)
* [Mousewheel](http://ractivejs.github.io/ractive-events-mousewheel)
* [Keys](http://ractivejs.github.io/ractive-events-keys)
* [Drag and Drop](https://github.com/Nijikokun/ractive.drag.drop.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
* [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
* [Viewport](https://github.com/svapreddy/ractive-event-viewport) - contributed by [@svapreddy](https://github.com/svapreddy)
* [Touch](https://github.com/rstacruz/ractive-touch) - contributed by [@rstacruz](https://github.com/rstacruz/)


## {{{createLink 'Transitions'}}}

* [Fade](http://ractivejs.github.io/ractive-transitions-fade)
* [Slide](http://ractivejs.github.io/ractive-transitions-slide)
* [Fly](http://ractivejs.github.io/ractive-transitions-fly)
* [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
* [Scale](https://github.com/1N50MN14/Ractive-transitions-scale) - contributed by [@1N50MN14](https://github.com/1N50MN14)
